--- a/apps/web/src/views/wallet/WalletView.responsive.css
+++ b/apps/web/src/views/wallet/WalletView.responsive.css
@@ -76,7 +76,7 @@
     flex-direction: column;
   }
 
-  .wallet-pager .el-pagination {
+  .wallet-pagination {
     justify-content: flex-start;
   }
 
